--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -23,6 +23,7 @@ include::{spring-data-commons-docs}/repositories.adoc[]
 include::repository.adoc[]
 include::reactiverepository.adoc[]
 include::template.adoc[]
+include::transactions.adoc[]
 // (daschl) disabled the ansijoins docs since it is being overhauled for 4.x
 // include::ansijoins.adoc[]
 :leveloffset: -1
