--- a/src/main/asciidoc/migrating.adoc
+++ b/src/main/asciidoc/migrating.adoc
@@ -22,7 +22,7 @@ For more information, see <<couchbase.configuration>>.
 
 Spring Data Couchbase 4.x will requires Spring Boot 2.3.x or higher. 
 
-If you are using Spring Boot in your project with Spring Data Couchbase 3.x, you will pontetially need to upgrade your Spring Boot version as well.
+If you are using Spring Boot in your project with Spring Data Couchbase 3.x, you will pontentially need to upgrade your Spring Boot version as well.
 
 [[couchbase.migrating.entities]]
 
