--- a/src/main/asciidoc/migrating.adoc
+++ b/src/main/asciidoc/migrating.adoc
@@ -18,11 +18,9 @@ The new SDK still has an environment that is used to configure it, so you can ov
 
 For more information, see <<couchbase.configuration>>.
 
-=== Spring Boot Version Support
+=== Spring Boot Version Compatibility
 
-Spring Data Couchbase 4.x requires Spring Boot 2.3.x or higher.
-
-If you are using Spring Boot in your project with Spring Data Couchbase 3.x, you will likely need to upgrade your Spring Boot version as well.
+Spring Boot 2.3.x or higher depends on Spring Data Couchbase 4.x. Earlier versions of Couchbase are not available because SDK 2 and 3 cannot live on the same classpath.
 
 [[couchbase.migrating.entities]]
 
