--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.1.18.RELEASE (2020-06-10)
+----------------------------------------------
+* DATACOUCH-528 - Release 3.1.18 (Lovelace SR18).
+
+
 Changes in version 4.0.0.RELEASE (2020-05-12)
 ---------------------------------------------
 * DATACOUCH-544 - Upgrade to Couchbase SDK 3.0.3.
