--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.2.8.RELEASE (2020-06-10)
+---------------------------------------------
+* DATACOUCH-563 - Upgrade to Couchbase SDK 2.7.15.
+* DATACOUCH-529 - Release 3.2.8 (Moore SR8).
+
+
 Changes in version 3.1.18.RELEASE (2020-06-10)
 ----------------------------------------------
 * DATACOUCH-528 - Release 3.1.18 (Lovelace SR18).
@@ -1040,6 +1046,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
