--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.1.19.RELEASE (2020-07-22)
+----------------------------------------------
+* DATACOUCH-566 - Release 3.1.19 (Lovelace SR19).
+
+
 Changes in version 4.1.0-M1 (2020-06-25)
 ----------------------------------------
 * DATACOUCH-565 - Use standard Spring code of conduct.
@@ -1074,6 +1079,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
