DATACOUCH-567 - Updated changelog.

--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.2.9.RELEASE (2020-07-22)
+---------------------------------------------
+* DATACOUCH-587 - Upgrade to Couchbase Driver 2.7.16.
+* DATACOUCH-567 - Release 3.2.9 (Moore SR9).
+
+
 Changes in version 3.1.19.RELEASE (2020-07-22)
 ----------------------------------------------
 * DATACOUCH-566 - Release 3.1.19 (Lovelace SR19).
@@ -1079,6 +1085,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
