--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,13 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 4.1.0-M2 (2020-08-12)
+----------------------------------------
+* DATACOUCH-599 - Upgrade to Couchbase SDK 3.0.7.
+* DATACOUCH-586 - Upgrade to Couchbase Driver 3.0.6.
+* DATACOUCH-578 - Release 4.1 M2 (2020.0.0).
+
+
 Changes in version 4.0.2.RELEASE (2020-07-22)
 ---------------------------------------------
 * DATACOUCH-590 - Using LIMIT within @Query.
@@ -1107,6 +1114,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
