--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.2.10.RELEASE (2020-09-16)
+----------------------------------------------
+* DATACOUCH-592 - Release 3.2.10 (Moore SR10).
+
+
 Changes in version 3.1.20.RELEASE (2020-09-16)
 ----------------------------------------------
 * DATACOUCH-596 - fix failure of new test (N1qlCouchbaseRepositoryTest) in 3.1.x.
@@ -1126,6 +1131,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
