--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 4.0.4.RELEASE (2020-09-16)
+---------------------------------------------
+* DATACOUCH-607 - Upgrade to Couchbase SDK 3.0.8.
+* DATACOUCH-602 - Release 4.0.4 (Neumann SR4).
+
+
 Changes in version 3.2.10.RELEASE (2020-09-16)
 ----------------------------------------------
 * DATACOUCH-592 - Release 3.2.10 (Moore SR10).
@@ -1140,6 +1146,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
