DATACOUCH-612 - Updated changelog.

--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 4.1.0-RC2 (2020-10-14)
+-----------------------------------------
+* DATACOUCH-612 - Release 4.1 RC2 (2020.0.0).
+
+
 Changes in version 4.1.0-RC1 (2020-09-16)
 -----------------------------------------
 * DATACOUCH-607 - Upgrade to Couchbase SDK 3.0.8.
@@ -1152,6 +1157,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
