DATACOUCH-610 - Updated changelog.

--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.2.11.RELEASE (2020-10-28)
+----------------------------------------------
+* DATACOUCH-610 - Release 3.2.11 (Moore SR11).
+
+
 Changes in version 3.1.21.RELEASE (2020-10-28)
 ----------------------------------------------
 * DATACOUCH-636 - Release 3.1.21 (Lovelace SR21).
@@ -1153,6 +1158,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
