--- a/src/main/asciidoc/configuration.adoc
+++ b/src/main/asciidoc/configuration.adoc
@@ -16,7 +16,7 @@ As a result, the library can be included like any other maven dependency:
 <dependency>
     <groupId>org.springframework.data</groupId>
     <artifactId>spring-data-couchbase</artifactId>
-    <version>4.0.0.RELEASE</version>
+    <version>4.1.1</version>
 </dependency>
 ----
 ====
@@ -33,7 +33,7 @@ Here is an example on how to use the current SNAPSHOT dependency:
 <dependency>
   <groupId>org.springframework.data</groupId>
   <artifactId>spring-data-couchbase</artifactId>
-  <version>4.0.0.BUILD-SNAPSHOT</version>
+  <version>4.2.0-SNAPSHOT</version>
 </dependency>
 
 <repository>
