--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.2.12.RELEASE (2020-12-09)
+----------------------------------------------
+* DATACOUCH-637 - Release 3.2.12 (Moore SR12).
+
+
 Changes in version 4.1.1 (2020-11-11)
 -------------------------------------
 * DATACOUCH-641 - Enable Maven caching for Jenkins jobs.
@@ -1208,6 +1213,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
