--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 4.0.6.RELEASE (2020-12-09)
+---------------------------------------------
+* DATACOUCH-641 - Enable Maven caching for Jenkins jobs.
+* DATACOUCH-638 - Release 4.0.6 (Neumann SR6).
+
+
 Changes in version 3.2.12.RELEASE (2020-12-09)
 ----------------------------------------------
 * DATACOUCH-637 - Release 3.2.12 (Moore SR12).
@@ -1222,6 +1228,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
