--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,13 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 4.2.0-M1 (2020-12-09)
+----------------------------------------
+* DATACOUCH-650 - Implement CrudRepository.delete(Iterable<ID> ids).
+* DATACOUCH-641 - Enable Maven caching for Jenkins jobs.
+* DATACOUCH-640 - Release 4.2 M1 (2021.0.0).
+
+
 Changes in version 4.0.6.RELEASE (2020-12-09)
 ---------------------------------------------
 * DATACOUCH-641 - Enable Maven caching for Jenkins jobs.
@@ -1219,6 +1226,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
