DATACOUCH-648 - Updated changelog.

--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 4.1.2 (2020-12-09)
+-------------------------------------
+* DATACOUCH-648 - Release 4.1.2 (2020.0.2).
+
+
 Changes in version 4.2.0-M1 (2020-12-09)
 ----------------------------------------
 * DATACOUCH-650 - Implement CrudRepository.delete(Iterable<ID> ids).
@@ -1226,6 +1231,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
