--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,10 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.2.13.RELEASE (2021-02-17)
+----------------------------------------------
+
+
 Changes in version 4.2.0-M2 (2021-01-13)
 ----------------------------------------
 * DATACOUCH-677 - revert 8ebb81b to fix comment (DATACOUCH-550).
@@ -1264,6 +1268,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
