--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,10 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 4.0.8.RELEASE (2021-03-17)
+---------------------------------------------
+
+
 Changes in version 4.2.0-M4 (2021-02-18)
 ----------------------------------------
 * #858 - AutoIndexing is not Working properly [DATACOUCH-550].
@@ -1305,6 +1309,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
