--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 4.2.0-M5 (2021-03-17)
+----------------------------------------
+* #1092 - regression - changes to public API CouchbaseRepositoryQuery and ReactiveCouchbaseRepositoryQuery.
+* #1079 - Upgrade to Couchbase SDK 3.1.3.
+
+
 Changes in version 4.1.6 (2021-03-17)
 -------------------------------------
 * #1092 - regression - changes to public API CouchbaseRepositoryQuery and ReactiveCouchbaseRepositoryQuery.
@@ -1315,6 +1321,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
