--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,10 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 4.0.9.RELEASE (2021-04-14)
+---------------------------------------------
+
+
 Changes in version 4.1.7 (2021-03-31)
 -------------------------------------
 * #1103 - revert 4.1.x to sdk 3.0.x.
@@ -1335,6 +1339,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
