--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,14 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 4.2.0 (2021-04-14)
+-------------------------------------
+* #1122 - upgrade master to SDK 3.1.4.
+* #1119 - Make supporting @TypeAlias the default behavior.
+* #1097 - NullPointerException in @Query that do not project __cas .  Should check for this explicitly.
+* #955 - Add @EnableReactiveCouchbaseAuditing  [DATACOUCH-644].
+
+
 Changes in version 4.1.8 (2021-04-14)
 -------------------------------------
 
@@ -1343,6 +1351,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
