--- a/CI.adoc
+++ b/CI.adoc
@@ -1,6 +1,6 @@
 = Continuous Integration
 
-image:https://jenkins.spring.io/buildStatus/icon?job=spring-data-couchbase%2Fmaster&subject=Moore%20(master)["Spring Data Couchbase", link="https://jenkins.spring
+image:https://jenkins.spring.io/buildStatus/icon?job=spring-data-couchbase%2Fmain&subject=Moore%20(main)["Spring Data Couchbase", link="https://jenkins.spring
 .io/view/SpringData/job/spring-data-couchbase/"]
 image:https://jenkins.spring.io/buildStatus/icon?job=spring-data-couchbase%2F3.1.x&subject=Lovelace%20(3.1.x)["Spring Data Couchbase", link="https://jenkins.spring
 .io/view/SpringData/job/spring-data-couchbase/"]
