--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 4.2.1 (2021-05-14)
+-------------------------------------
+* #1136 - upgrade java sdk to 3.1.5.
+
+
 Changes in version 4.1.9 (2021-05-14)
 -------------------------------------
 
@@ -1355,6 +1360,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
