--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,10 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 4.2.3 (2021-07-16)
+-------------------------------------
+
+
 Changes in version 4.2.2 (2021-06-22)
 -------------------------------------
 
@@ -1368,6 +1372,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
