--- a/README.adoc
+++ b/README.adoc
@@ -157,7 +157,7 @@ https://jira.spring.io/browse/DATACOUCH[issue tracker] to see if someone has alr
 == Building from Source
 
 You don’t need to build from source to use Spring Data (binaries in https://repo.spring.io[repo.spring.io]), but if you want to try out the latest and greatest, Spring Data can be easily built with the https://github.com/takari/maven-wrapper[maven wrapper].
-You also need JDK 1.8.
+You also need JDK 17 or above.
 
 [source,bash]
 ----
