--- a/src/main/asciidoc/configuration.adoc
+++ b/src/main/asciidoc/configuration.adoc
@@ -11,12 +11,12 @@ As a result, the library can be included like any other maven dependency:
 
 .Including the dependency through maven
 ====
-[source,xml]
+[source,xml,subs="+attributes"]
 ----
 <dependency>
     <groupId>org.springframework.data</groupId>
     <artifactId>spring-data-couchbase</artifactId>
-    <version>4.2.5</version>
+    <version>{version}</version>
 </dependency>
 ----
 ====
@@ -33,7 +33,7 @@ Here is an example on how to use the current SNAPSHOT dependency:
 <dependency>
   <groupId>org.springframework.data</groupId>
   <artifactId>spring-data-couchbase</artifactId>
-  <version>4.3.0-SNAPSHOT</version>
+  <version>${version}-SNAPSHOT</version>
 </dependency>
 
 <repository>
