--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -11,6 +11,7 @@ NOTE: Copies of this document may be made for your own use and for distribution 
 toc::[]
 
 include::preface.adoc[]
+include::{spring-data-commons-docs}/upgrade.adoc[leveloffset=+1]
 
 [[reference]]
 = Reference Documentation
