Mention @Version in transaction documentation.
Closes #1651.

--- a/src/main/asciidoc/transactions.adoc
+++ b/src/main/asciidoc/transactions.adoc
@@ -9,6 +9,7 @@ Couchbase supports https://docs.couchbase.com/server/current/learn/data/transact
  - Spring Data Couchbase 5.0.0-M5 or above.
  - NTP should be configured so nodes of the Couchbase cluster are in sync with time. The time being out of sync will not cause incorrect behavior, but can impact metadata cleanup.
  - Set spring.main.allow-bean-definition-overriding=true either in application.properties or as a SpringApplicationBuilder property.
+ - The entity class must have an `@Version Long` property to hold the CAS value of the document.
 
 == Overview
 The Spring Data Couchbase template operations insert, find, replace and delete and repository methods that use those calls can participate in a Couchbase Transaction. They can be executed in a transaction by using the @Transactional annotation, the CouchbaseTransactionalOperator, or in the lambda of a Couchbase Transaction.  
